--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -89,7 +89,7 @@
                         <div class="row">
                             <div class="col-md-4">
                                 <div class="form-group">
-                                    <label for="dia">Día (1-31): </label>
+                                    <label for="dia">Día (1-<span id="max-day-of-month"></span>): </label>
                                     <input type="number" id="dia" class="form-control" name="dia" min="1" max="31">
                                 </div>
                             </div>
