--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-<%- include('head'); %>
+    
+    <%- include('head'); %>
 
     <body>
         <header class="h2">
@@ -54,6 +55,7 @@
                                     </div>
                                 <% } %>
                             </div>
+                            <button id="all-horas-button">Check all</button>
                         </fieldset>
                     </div>
 
@@ -115,7 +117,7 @@
                             </div>
                             <div class="col-md-4">
                                 <div class="form-group">
-                                    <label for="anho">Año (2023-2100): </label>
+                                    <label for="anho">Año (<span id="anho-actual"></span>-2100): </label>
                                     <input type="number" id="anho" class="form-control" name="anho" min="2023"
                                         max="2100">
                                 </div>
