Se agregaron botones de check ally uncheck all para días

--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -55,8 +55,8 @@
                                     </div>
                                 <% } %>
                             </div>
-                            <button id="check-all-button">Check all</button>
-                            <button id="uncheck-all-button">Uncheck all</button>
+                            <button id="check-all-horas-button">Check all</button>
+                            <button id="uncheck-all-horas-button">Uncheck all</button>
                         </fieldset>
                     </div>
 
@@ -84,6 +84,8 @@
                                         </div>
                                     <% } %>
                                 </div>
+                                <button id="check-all-dias-button">Check all</button>
+                                <button id="uncheck-all-dias-button">Uncheck all</button>
                             </fieldset>
                         </div>
                     </div>
