--- a/app/views/stats.ejs
+++ b/app/views/stats.ejs
@@ -1,9 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <%- include('head'); %>
+
 <body>
+
+    <%- include('header'); %>
     
     Stats  
+
+    <%- include('footer'); %>
     
 </body>
+
 </html>
