Se puede agregar actividad desde index de manera simplificada, slas opciones avanzadas no tienen acordeón.

--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -7,6 +7,10 @@
 
         <%- include('header'); %>
 
+        <%- include('insertform'); %>
+
+        <a href="advanced" class="btn btn-primary">Más opciones</a>
+
         <section>
             <h1>Actividades del día</h1>
 
