--- a/app/views/header.ejs
+++ b/app/views/header.ejs
@@ -10,10 +10,13 @@
             <a class="nav-link" href="/">Hoy</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/insertform">Añadir</a>
+            <a class="nav-link" href="/advanced">Avanzado</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/stats">Estadísticas</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/config">Configuración</a>
           </li>
         </ul>
       </div>
