Se cambió la bdd: Se eliminaron las tablas nota, rutina, y las de relaciones múltiples. Actividad ahora señala a una tabla tipo, con los 3 tipos de actividades. Se cambió la función del modelo que maneja el insert, para que inserte apropiadamente con los cambios.

--- a/app/views/header.ejs
+++ b/app/views/header.ejs
@@ -13,10 +13,10 @@
             <a class="nav-link" href="/advanced">Avanzado</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/stats">Estadísticas</a>
+            <a class="nav-link" href="/stats">Stats.</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/config">Configuración</a>
+            <a class="nav-link" href="/config">Config.</a>
           </li>
         </ul>
       </div>
