--- a/app/views/insertform.ejs
+++ b/app/views/insertform.ejs
@@ -2,7 +2,7 @@
 
     <div class="form-group">
         <label for="actividad-input">Agregar nueva <span id="texto-entidad">actividad</span>:</label>
-        <input class="form-control" type="text" id="actividad-input" name="actividad-input">
+        <input class="form-control" type="text" id="actividad-input" name="actividad-input" required>
     </div>
 
     <div id="opcionesAvanzadas">
@@ -10,9 +10,9 @@
         <div class="form-group">
             <label for="dropdown-select">Seleccionar tipo:</label>
             <select id="dropdown-select" class="form-control" name="dropdown-select">
-                <option value="actividad" selected>Actividad</option>
-                <option value="rutina">Rutina</option>
-                <option value="nota">Nota</option>
+                <option value="1" selected>Puntual</option>
+                <option value="2">Rutina</option>
+                <option value="3">Nota</option>
             </select>
         </div>
 
