--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,27 +1,15 @@
-.accordion-btn {
-    background-color: #f5f5f5;
-    color: #444;
-    cursor: pointer;
-    padding: 18px;
+  
+  body {
+    position: relative;
+    min-height: 100vh;
+    padding-bottom: calc(134px + 20px); /* Height of the footer + extra padding */
+  }
+  
+  footer {
+    position: absolute;
+    bottom: 0;
     width: 100%;
-    text-align: left;
-    border: none;
-    outline: none;
-    transition: background-color 0.3s ease;
-    font-size: 16px;
-}
-
-.active,
-.accordion-btn:hover {
-    background-color: #ddd;
-}
-
-.card-body {
-    display: none;
-    padding: 18px;
-    background-color: white;
-    overflow: hidden;
-}
+  }
 
 /* ---- Widget de horas y días ---- */
 
