Boton para borrar cookies del sitio.

--- a/app/views/config.ejs
+++ b/app/views/config.ejs
@@ -7,9 +7,15 @@
 
     <%- include('header'); %>
     
-    Stats  
+    Borrar cookies:
+
+    <button class="btn btn-danger" id="delete-cookies-button">
+        Borrar cookies
+    </button>
 
     <%- include('footer'); %>
+
+    <script src="js/config.js"></script>
     
 </body>
 
