Form en index se separo en su propio ejs y script. Envia los valores por defecto apendando a formData.

--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -12,9 +12,7 @@
 
         <%- include('header'); %>
 
-        <%- include('insertform'); %>
-
-        <a href="advanced" class="btn btn-primary">Más opciones</a>
+        <%- include('indexform'); %>
 
         <section id="actividadesDivs">
         </section>
