Emojis en header. Fix cambio de valor en selects de advanced causaban que algunas funciones no funcionasen.

--- a/app/views/advancedform.ejs
+++ b/app/views/advancedform.ejs
@@ -121,8 +121,8 @@
     Add
 </button>
 
-<button class="btn btn-danger">
+<button class="btn btn-danger" id="clearButton">
     Clear
 </button>
 
-<script src="js/insertFormScript.js"></script>
+<script src="js/advancedForm.js"></script>
