--- a/app/views/advanced.ejs
+++ b/app/views/advanced.ejs
@@ -7,7 +7,7 @@
 
     <%- include('header'); %>
    
-    <%- include('insertform'); %>
+    <%- include('advancedform'); %>
 
     <%- include('footer'); %>
     
