--- a/app/views/header.ejs
+++ b/app/views/header.ejs
@@ -1,22 +1,50 @@
 <header class="h2">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="#">Nowty</a>
+      <a class="navbar-brand btn btn-outline-info m-2" href="#">
+        <center>
+          <div>⏰</div>
+          <b>Nowty</b>
+        </center>
+      </a>
+      
+
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
+
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" href="/">Hoy</a>
+            <a class="nav-link" href="/">
+              <center>
+                <div>🌞</div>
+                <small>Hoy</small>
+              </center>
+            </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/advanced">Avanzado</a>
+            <a class="nav-link" href="/advanced">
+              <center>
+                <div>🚀</div>
+                <small>Avanzado</small>
+              </center>
+            </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/stats">Stats.</a>
+            <a class="nav-link" href="/stats">
+              <center>
+                <div>📊</div>
+                <small>Stats.</small>
+              </center>
+            </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/config">Config.</a>
+            <a class="nav-link" href="/config">
+              <center>
+                <div>⚙️</div>
+                <small>Config.</small>
+              </center>
+            </a>
           </li>
         </ul>
       </div>
