--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -24,7 +24,7 @@
 
         <%- include('footer'); %>
 
-        <script src="js/indexScript.js"></script>
+        <script src="js/index.js"></script>
 
     </body>
 
