--- a/app/views/advancedform.ejs
+++ b/app/views/advancedform.ejs
@@ -81,13 +81,13 @@
                 <div class="col-md-4">
                     <div class="form-group">
                         <label for="dia">Día (1-<span id="max-day-of-month"></span>): </label>
-                        <input type="number" id="dia" class="form-control" name="dia" min="1" max="31">
+                        <input type="number" id="dia" class="form-control" name="dia" min="1" max="31" required>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="form-group">
                         <label for="mes">Mes: </label>
-                        <select id="mes" class="form-control" name="mes">
+                        <select id="mes" class="form-control" name="mes" required>
                             <option value=""></option>
                             <option value="1">Enero</option>
                             <option value="2">Febrero</option>
@@ -107,8 +107,7 @@
                 <div class="col-md-4">
                     <div class="form-group">
                         <label for="anho">Año (<span id="anho-actual"></span>-2100): </label>
-                        <input type="number" id="anho" class="form-control" name="anho" min="2023"
-                            max="2100">
+                        <input type="number" id="anho" class="form-control" name="anho" min="2023" max="2100" required>
                     </div>
                 </div>
             </div>
