--- a/app/views/indexForm.ejs
+++ b/app/views/indexForm.ejs
@@ -1,7 +1,7 @@
-<form id="addForm">
+<form id="addForm" class="form-style">
 
     <div class="form-group">
-        <label for="actividad-input">Agregar nueva actividad:</label>
+        <label for="actividad-input">Nueva actividad:</label>
         <input class="form-control" type="text" id="actividad-input" name="actividad-input" required>
     </div>
 
