--- a/public/css/style.css
+++ b/public/css/style.css
@@ -33,25 +33,72 @@
 }
 
 input[type='checkbox'].horas {
-    height: 50px;
-    width: 50px;
-    accent-color: red;
+    height: 65px;
+    width: 65px;
+    margin: 2px;
+    accent-color: rgb(99, 93, 131);
 }
 
 input[type='checkbox'].dias {
-    height: 50px;
-    width: 50px;
-    accent-color: green;
+    height: 70px;
+    width: 70px;
+    margin: 2px;
+    accent-color: rgb(245, 78, 142);
 }
 
-.dark {
-    background-color: #444;
-}
+.time {
+    border-radius: 5px;
+    padding: 2px 6px;
+    font-size: smaller;
+  }
 
-.semilight {
-    background-color: aqua;
-}
+  .time.weekday {
+    background-color: #ffdfba;
+    color: #646464;
+  }
 
-.light {
-    background-color: yellow;
-}
+  .time.dark {
+    background-color: #bdc9d4;
+    color: #646464;
+  }
+  
+  .time.semilight {
+    background-color: #ffdfba;
+    color: #646464;
+  }
+  
+  .time.light {
+    background-color: #fff6c0;
+    color: #646464;
+  }
+  
+  .time.dark:before {
+    content: "\1F31C ";
+  }
+  
+  .time.semilight:before {
+    content: "\1F307 ";
+  }
+  
+  .time.light:before {
+    content: "\1F31E ";
+  }
+  
+  /* ---- Form ---- */
+  
+  .form-group {
+    margin: 20px;
+  }
+
+  .form-style {
+    border-radius: 15px;
+    margin: 30px;
+    padding: 30px;
+    border: 1px solid #cccccc;
+    box-shadow: 2px 2px 2px #646464;
+    background: linear-gradient(232deg, rgb(248, 251, 255) 0%, rgb(244, 241, 247) 87%, rgb(243, 236, 234) 100%);
+  }
+
+  input, select, textarea {
+    box-shadow: inset 1px 1px 1px #979797;
+  }
