Se deshabilito creacion de cookies. Elementos en index se renderizan correctamente. Fix: Asignacion de event listeners a hecho checkboxes tras creacion de divs en index.

--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -4,7 +4,7 @@
 <%- include('head'); %>
 
 <script>
-    const incomingData = <%- JSON.stringify(data) %>;
+    var incomingData = <%- JSON.stringify(data) %>;
 </script>
   
 
