Estilo de index. Version Beta.

--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -14,10 +14,16 @@
 
         <%- include('indexform'); %>
 
+        <br>
+
         <section id="actividadesDivs">
         </section>
 
-        Notas
+        <center>
+            <h5 class="m-3">
+                Notas
+            </h5>
+        </center>
 
         <section id="notasDivs">
         </section>
