--- a/app/views/indexForm.ejs
+++ b/app/views/indexForm.ejs
@@ -7,14 +7,16 @@
 
 </form>
 
-<button class="btn btn-primary" id="addButton">
-    Add
-</button>
-
-<button class="btn btn-danger">
-    Clear
-</button>
-
-<a href="advanced" class="btn btn-primary">Más opciones</a>
+<center>
+    <button class="btn btn-primary" id="addButton">
+        Add
+    </button>
+    
+    <button class="btn btn-danger">
+        Clear
+    </button>
+    
+    <a href="advanced" class="btn btn-outline-primary">🚀</a>
+</center>
 
 <script src="js/indexForm.js"></script>
