--- a/public/css/style.css
+++ b/public/css/style.css
@@ -102,3 +102,48 @@ input[type='checkbox'].dias {
   input, select, textarea {
     box-shadow: inset 1px 1px 1px #979797;
   }
+
+    /* ---- Actividades y notas ---- */
+
+    .actividades, .notas {
+      border-radius: 8px;
+      margin-left: 30px;
+      margin-right: 30px;
+      padding: 15px;
+      border: 2px solid #cccccc;
+      box-shadow: 2px 2px 2px #646464;
+    }
+
+    .actividades {
+      display: flex;
+      background: linear-gradient(232deg, rgb(255, 255, 255) 0%, rgb(252, 249, 250) 87%, rgb(252, 249, 248) 100%);
+    }
+    .notas {
+      display: flex;
+      background: linear-gradient(232deg, rgb(255, 255, 255) 0%, rgb(249, 252, 250) 87%, rgb(250, 248, 252) 100%);
+    }
+
+    img {
+      width: 120px;
+      height: 120px;
+      object-fit: cover;
+      border: 1px solid #cccccc;
+    }
+
+    input[type='checkbox'].hecho-checkbox {
+      height: 50px;
+      width: 50px;
+      margin: 2px;
+      accent-color: rgb(99, 93, 131);
+  }
+
+  .actividad-text {
+    white-space: pre-wrap;
+    margin-left: 20px;
+    margin-right: 20px;
+    flex-grow: 3
+  }
+
+  .actividad-text::first-line{
+    font-weight:bold
+   }
