--- a/app/views/header.ejs
+++ b/app/views/header.ejs
@@ -1,6 +1,6 @@
 <header class="h2">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand btn btn-outline-info m-2" href="#">
+      <a class="navbar-brand btn btn-outline-info m-2" href="/">
         <center>
           <div>⏰</div>
           <b>Nowty</b>
