Botón de resetear rutinas en index

--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -28,6 +28,14 @@
         <section id="notasDivs">
         </section>
 
+        <br>
+
+        <center>
+            <button id="resetButton" class="btn btn-danger">
+                Reset routines
+            </button>
+        </center>
+
         <%- include('footer'); %>
 
         <script src="js/index.js"></script>
