Fixed Footer CSS. The structure is now based on flex. Added delete route, controller and model functions. Activities and notes  can now be deleted from the client.

--- a/backend/app/views/index.ejs
+++ b/backend/app/views/index.ejs
@@ -12,29 +12,31 @@
 
         <%- include('header'); %>
 
-        <%- include('indexform'); %>
+        <section id="contentSection">
+            <%- include('indexform'); %>
 
-        <br>
-
-        <section id="actividadesDivs">
+            <br>
+    
+            <section id="actividadesDivs">
+            </section>
+    
+            <center>
+                <h5 class="m-3">
+                    Notas
+                </h5>
+            </center>
+    
+            <section id="notasDivs">
+            </section>
+    
+            <br>
+    
+            <center>
+                <button id="resetButton" class="btn btn-danger">
+                    Reset routines
+                </button>
+            </center>
         </section>
-
-        <center>
-            <h5 class="m-3">
-                Notas
-            </h5>
-        </center>
-
-        <section id="notasDivs">
-        </section>
-
-        <br>
-
-        <center>
-            <button id="resetButton" class="btn btn-danger">
-                Reset routines
-            </button>
-        </center>
 
         <%- include('footer'); %>
 
