--- a/backend/app/views/header.ejs
+++ b/backend/app/views/header.ejs
@@ -39,6 +39,14 @@
             </a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="/admin">
+              <center>
+                <div>🛢️</div>
+                <small>Admin.</small>
+              </center>
+            </a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="/config">
               <center>
                 <div>⚙️</div>
